test/functions/varargs/multipleVarArgs.good
multipleVarArgs.chpl:2: error: No support for a function with multiple vararg sets
