test/functions/varargs/multipleVarArgs.chpl

proc foo(lhs..., rhs...) {
  writeln("lhs = ", lhs);
  writeln("rhs = ", rhs);
}

foo(1,2,3,4,5,6);
